--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Calendar</string>
+    <!--<string name="app_name">Calendar</string>-->
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="save">保存</string>
